# gpt-on-cmd

./: .gitignore  Cargo.toml  README.md
goversion/: client.go  go.mod  main.go  tea-model.go
src/: main.rs
